<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">CARFU AI</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_header_subtitle">May I help you?</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
...
